# Http-cs2

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/gsi/: ingestion.hpp  parser.hpp  types.hpp
include/http/: config.hpp  response.hpp  router.hpp  server.hpp  session.hpp  types.hpp
src/: main.cpp
src/gsi/: ingestion.cpp  parser.cpp
src/http/: response.cpp  router.cpp  server.cpp  session.cpp
tests/: test_parser.cpp
